mon-pfe/frontend/k8s/auth-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-frontend
  template:
    metadata:
      labels:
        app: auth-frontend
    spec:
      containers:
        - name: auth-frontend
          image: ${DOCKER_REGISTRY}/autisme-auth-frontend:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: auth-frontend
spec:
  selector:
    app: auth-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
