mon-pfe/frontend/k8s/gateway-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-frontend
  template:
    metadata:
      labels:
        app: gateway-frontend
    spec:
      containers:
        - name: gateway-frontend
          image: ${DOCKER_REGISTRY}/autisme-gateway-frontend:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-frontend
spec:
  selector:
    app: gateway-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
