mon-pfe/frontend/k8s/user-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-frontend
  template:
    metadata:
      labels:
        app: user-frontend
    spec:
      containers:
        - name: user-frontend
          image: ${DOCKER_REGISTRY}/autisme-user-frontend:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: user-frontend
spec:
  selector:
    app: user-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
