mon-pfe/frontend/k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: autisme-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-frontend
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-frontend
            port:
              number: 80
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-frontend
            port:
              number: 80
